Updated code for different parts. Random isn't fixed yet and category 3 isn't functioning totally right now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         <activity
             android:name=".CategoriesActivity"
             android:label="@string/title_activity_categories"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CategoryOne" />
+        <activity android:name=".CategoryThree" />
+        <activity android:name=".CategoryTwo"></activity>
     </application>
 
 </manifest>
